--- a/first.html
+++ b/first.html
@@ -8,5 +8,6 @@
 <body>
     <p>This is the first HTML file.</p>
     <p>This is a practical of vs subject</p>
+    <p>This thrid line</p>
 </body>
 </html>
